@@ -70,14 +70,16 @@ The \PostProc\ package was originally developed by Stefano Baroni,
 Stefano de Gironcoli, Andrea Dal Corso (SISSA), Paolo Giannozzi 
 (Univ. Udine), and many others. We mention in particular: 
 \begin{itemize}
-\item Andrea Benassi (SISSA) for the \texttt{epsilon} utility;
+\item Andrea Benassi (SISSA) for the \texttt{epsilon} utility,
+      Tae Yun Kim and Cheol-Hwan Park (Seoul National University)
+      for fixes to it;
 \item Dmitry Korotin (Inst. Met. Phys. Ekaterinburg) for the
-\texttt{wannier\_ham} utility;
+      \texttt{wannier\_ham} utility;
 \item Georgy Samsonidze (Bosch Research) for the interface
-      with the Berkeley GW code.
-\item The late Prof. Eyvaz Isaev for the Fermi Surface code.
+      with the Berkeley GW code;
+\item The late Prof. Eyvaz Isaev for the Fermi Surface code;
 \item Natalie Holzwarth (WFU) for the PAW projection in code
-     \texttt{projwfc.f90}
+     \texttt{projwfc.f90}.
 \end{itemize}
 
 \PostProc\ is free software, released under the 
